--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         }
     ],
     "require": {
-        "php": "^5.3.2 || ^7.0"
+        "php": "^5.3.2 || ^7.0",
+        "psr/log": "1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
