--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,9 @@
     ],
     "require": {
         "php": "^5.3.2 || ^7.0",
-        "psr/log": "1.0"
+        "psr/log": "1.0",
+        "symfony/filesystem": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "symfony/finder": "^2.7 || ^3.0 || ^4.0 || ^5.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
