--- a/composer.json
+++ b/composer.json
@@ -20,7 +20,8 @@
         "psr/log": "1.0",
         "symfony/filesystem": "^2.7 || ^3.0 || ^4.0 || ^5.0",
         "symfony/finder": "^2.7 || ^3.0 || ^4.0 || ^5.0",
-        "symfony/process": "^2.7 || ^3.0 || ^4.0 || ^5.0"
+        "symfony/process": "^2.7 || ^3.0 || ^4.0 || ^5.0",
+        "composer/semver": "1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "*"
